added put method in security config